syntax = "proto3";

option go_package = "github.com/watup-lk/identity-service/api/proto/v1";

package identityv1;

// IdentityService provides internal gRPC endpoints for service-to-service authentication.
// Other services (vote-service, salary-service) call ValidateToken to verify user JWTs
// without routing through the BFF.
service IdentityService {
  // ValidateToken checks whether an access token is valid and returns the user_id.
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);

  // GetUser returns basic user metadata given a user_id. Email is never returned.
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool   valid   = 1;
  string user_id = 2;
  string error   = 3;
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  string user_id    = 1;
  bool   is_active  = 2;
  string created_at = 3;
}
